added docker file

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,9 @@
-#DATABASE = "mongodb://localhost:27017"
+DATABASE="mongodb+srv://idurar_user:Idurar12345@idurar-cluster.n5utrbg.mongodb.net/idurar?retryWrites=true&w=majority"
+
 #RESEND_API = "your resend_api"
 #OPENAI_API_KEY = "your open_ai api key"
-JWT_SECRET= "your_private_jwt_secret_key"
-NODE_ENV = "production"
+JWT_SECRET="superStrongSecretKey123"  
+NODE_ENV="development"
+
 OPENSSL_CONF='/dev/null'
 PUBLIC_SERVER_FILE="http://localhost:8888/"
