--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -117,15 +117,16 @@ jobs:
 
       # ---------- Slack notification ----------
       - name: Notify Slack on success
-        if: success() && secrets.SLACK_WEBHOOK_URL != ''
+        if: ${{ success() && secrets.SLACK_WEBHOOK_URL != '' }}
         run: |
           curl -X POST -H 'Content-type: application/json' \
             --data "{\"text\":\"✅ Deployment successful for *${{ github.repository }}* on commit *${{ github.sha }}*.\"}" \
             ${{ secrets.SLACK_WEBHOOK_URL }}
 
       - name: Notify Slack on failure
-        if: failure() && secrets.SLACK_WEBHOOK_URL != ''
+        if: ${{ failure() && secrets.SLACK_WEBHOOK_URL != '' }}
         run: |
           curl -X POST -H 'Content-type: application/json' \
             --data "{\"text\":\"❌ Deployment FAILED for *${{ github.repository }}* on commit *${{ github.sha }}*. Check GitHub Actions logs.\"}" \
             ${{ secrets.SLACK_WEBHOOK_URL }}
+
