Configure production backend endpoints for frontend

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,4 @@
-REACT_APP_API_URL=http://13.202.198.203:8888/api
+# frontend/.env.production (PRODUCTION ONLY)
+VITE_BACKEND_SERVER=http://13.202.198.203:8888/
+VITE_FILE_BASE_URL=http://13.202.198.203:8888/
+PROD=true
