update env file

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,8 @@
-# frontend/.env.production (PRODUCTION ONLY)
-VITE_BACKEND_SERVER=http://13.202.198.203:8888/
-VITE_FILE_BASE_URL=http://13.202.198.203:8888/
+
+# Backend on your Lightsail server
+VITE_FILE_BASE_URL='http://13.202.198.203:8888/'
+VITE_BACKEND_SERVER='http://13.202.198.203:8888/'
+
+# Tell frontend code we are in production / remote mode
 PROD=true
+VITE_DEV_REMOTE='remote'
