update env file

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,8 @@
 
 # ----> Remove # comment
-VITE_FILE_BASE_URL = 'http://localhost:8888/'
-VITE_BACKEND_SERVER="http://your_backend_url_server.com/"
-PROD = false
+#VITE_FILE_BASE_URL = 'http://localhost:8888/'
+#VITE_BACKEND_SERVER="http://your_backend_url_server.com/"
+#PROD = false
+VITE_BACKEND_SERVER=http://13.202.198.203:8888/
+VITE_FILE_BASE_URL=http://13.202.198.203:8888/
+VITE_DEV_REMOTE=remote
