update env file

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,8 @@
-VITE_BACKEND_SERVER=http://13.202.198.203:8888/
-VITE_FILE_BASE_URL=http://13.202.198.203:8888/
-VITE_DEV_REMOTE=remote
+# Backend API for production (your Lightsail server)
+VITE_BACKEND_SERVER="http://13.202.198.203:8888/"
+
+# File base url for production (downloads, uploads)
+VITE_FILE_BASE_URL="http://13.202.198.203:8888/"
+
+# Optional, but fine to set
+VITE_DEV_REMOTE="remote"
